--- a/paper/Data.tex
+++ b/paper/Data.tex
@@ -7,22 +7,22 @@
     \begin{tabular}{@{}l|lll@{}}
     \toprule
     Test                                  & 2to3 Translation                      & 2to3 Output                            & 2to3 Output Correct \\ \midrule
-    test\_1                               & \lstinline[language=Python, style=pythonstyle]|print(1, 1+1, 1+1+1)                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'  |            & True                \\
-    test\_2                               & \lstinline[language=Python, style=pythonstyle]|print(1, 2)                          | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'   |             & True                \\
-    test\_3                               & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'\n'    |               & True                \\
-    test\_4                               & \lstinline[language=Python, style=pythonstyle]|print(1); print()                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n\n' |& True                \\
-    test\_5                               & \lstinline[language=Python, style=pythonstyle]|print(); print(1);                   | & \lstinline[language=Python, style=pythonstyle]|b'\n1\n' |& True                \\
-    test\_prefix\_preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,   1+1,   1+1+1)             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'  |            & True                \\
-    test\_trailing\_comma\_1              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, end=' ')              | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '   |                           & False               \\
-    test\_trailing\_comma\_2              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ')                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '  |                              & False               \\
-    test\_trailing\_comma\_3              & \lstinline[language=Python, style=pythonstyle]|print(1, end=' ')                    | & \lstinline[language=Python, style=pythonstyle]|b'1 '        |                          & False               \\
-    test\_tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1, 2, 3))                     | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'  |        & True                \\
-    test\_idempotency\_1                  & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'\n'     |              & False               \\
-    test\_idempotency\_2                  & \lstinline[language=Python, style=pythonstyle]|print('')                            | & \lstinline[language=Python, style=pythonstyle]|b'\n'        |           & True                \\
-    test\_vargs\_without\_trailing\_comma & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, file=sys.stderr)      | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'  |            & True                \\
-    test\_with\_trailing\_comma           & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ', file=sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'1 2 '    |                            & False               \\
-    test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1, file=sys.stderr)          | & \lstinline[language=Python, style=pythonstyle]|b'2\n'    |             & True                \\
-    test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)               | & \lstinline[language=Python, style=pythonstyle]|b'\n'   |                & True                \\ \bottomrule
+    test-1                               & \lstinline[language=Python, style=pythonstyle]|print(1, 1+1, 1+1+1)                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'  |            & True                \\
+    test-2                               & \lstinline[language=Python, style=pythonstyle]|print(1, 2)                          | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'   |             & True                \\
+    test-3                               & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'\n'    |               & True                \\
+    test-4                               & \lstinline[language=Python, style=pythonstyle]|print(1); print()                    | & \lstinline[language=Python, style=pythonstyle]|b'1\n\n' |& True                \\
+    test-5                               & \lstinline[language=Python, style=pythonstyle]|print(); print(1);                   | & \lstinline[language=Python, style=pythonstyle]|b'\n1\n' |& True                \\
+    test-prefix-preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,   1+1,   1+1+1)             | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'  |            & True                \\
+    test-trailing-comma-1              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, end=' ')              | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '   |                           & False               \\
+    test-trailing-comma-2              & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ')                 | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '  |                              & False               \\
+    test-trailing-comma-3              & \lstinline[language=Python, style=pythonstyle]|print(1, end=' ')                    | & \lstinline[language=Python, style=pythonstyle]|b'1 '        |                          & False               \\
+    test-tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1, 2, 3))                     | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'  |        & True                \\
+    test-idempotency-1                  & \lstinline[language=Python, style=pythonstyle]|print()                              | & \lstinline[language=Python, style=pythonstyle]|b'\n'     |              & False               \\
+    test-idempotency-2                  & \lstinline[language=Python, style=pythonstyle]|print('')                            | & \lstinline[language=Python, style=pythonstyle]|b'\n'        |           & True                \\
+    test-vargs-without-trailing-comma & \lstinline[language=Python, style=pythonstyle]|print(1, 2, 3, file=sys.stderr)      | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'  |            & True                \\
+    test-with-trailing-comma           & \lstinline[language=Python, style=pythonstyle]|print(1, 2, end=' ', file=sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'1 2 '    |                            & False               \\
+    test-no-trailing-comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1, file=sys.stderr)          | & \lstinline[language=Python, style=pythonstyle]|b'2\n'    |             & True                \\
+    test-spaces-before-file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)               | & \lstinline[language=Python, style=pythonstyle]|b'\n'   |                & True                \\ \bottomrule
     \end{tabular}
     \caption{2to3 translation and output of translated code for each test.}
     \label{table:2to3-accuracy}
@@ -32,25 +32,25 @@
     \centering
     \begin{tabular}{@{}l|lll@{}}
     \toprule
-    Test                                  & fix\_print Translation             & fix\_print Output             & fix\_print Output Correct \\ \midrule
-    test\_1                               & \lstinline[language=Python, style=pythonstyle]|print(1,1+1,1+1+1)                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | & True                      \\
-    test\_2                               & \lstinline[language=Python, style=pythonstyle]|print(1,2)                        | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'      | & True                      \\
-    test\_3                               & \lstinline[language=Python, style=pythonstyle]|print()                           | & \lstinline[language=Python, style=pythonstyle]|b'\n'         | & True                      \\
-    test\_4                               & \lstinline[language=Python, style=pythonstyle]|print(1;print)                    | & \lstinline[language=Python, style=pythonstyle]|b''           |                & False                     \\
-    test\_5                               & \lstinline[language=Python, style=pythonstyle]|print(;print1;)                   | & \lstinline[language=Python, style=pythonstyle]|b''           |                & False                     \\
-    test\_prefix\_preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,1+1,1+1+1)                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | & True                      \\
-    test\_trailing\_comma\_1              & \lstinline[language=Python, style=pythonstyle]|print(1,2,3,end=' ')              | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '     |                & False                     \\
-    test\_trailing\_comma\_2              & \lstinline[language=Python, style=pythonstyle]|print(1,2,end=' ')                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '       |                & False                     \\
-    test\_trailing\_comma\_3              & \lstinline[language=Python, style=pythonstyle]|print(1,end=' ')                  | & \lstinline[language=Python, style=pythonstyle]|b'1 '         |                & False                     \\
-    test\_tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1,2,3))                    | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'| & True                      \\
-    test\_idempotency\_1                  & \lstinline[language=Python, style=pythonstyle]|print(())                         | & \lstinline[language=Python, style=pythonstyle]|b'()\n'       | & True                      \\
-    test\_idempotency\_2                  & \lstinline[language=Python, style=pythonstyle]|print((''))                       | & \lstinline[language=Python, style=pythonstyle]|b'\n'         | & True                      \\
-    test\_vargs\_without\_trailing\_comma & \lstinline[language=Python, style=pythonstyle]|print(1,2,3,file=sys.stderr)      | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | & True                      \\
-    test\_with\_trailing\_comma           & \lstinline[language=Python, style=pythonstyle]|print(1,2,end=' ',file=sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'1 2 '       |                & False                     \\
-    test\_no\_trailing\_comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1,file=sys.stderr)        | & \lstinline[language=Python, style=pythonstyle]|b'2\n'        | & True                      \\
-    test\_spaces\_before\_file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)            | & \lstinline[language=Python, style=pythonstyle]|b'\n'         | & True                      \\ \bottomrule
+    Test                                  & fix-print Translation             & fix-print Output             & fix-print Output Correct \\ \midrule
+    test-1                               & \lstinline[language=Python, style=pythonstyle]|print(1,1+1,1+1+1)                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | & True                      \\
+    test-2                               & \lstinline[language=Python, style=pythonstyle]|print(1,2)                        | & \lstinline[language=Python, style=pythonstyle]|b'1 2\n'      | & True                      \\
+    test-3                               & \lstinline[language=Python, style=pythonstyle]|print()                           | & \lstinline[language=Python, style=pythonstyle]|b'\n'         | & True                      \\
+    test-4                               & \lstinline[language=Python, style=pythonstyle]|print(1;print)                    | & \lstinline[language=Python, style=pythonstyle]|b''           |                & False                     \\
+    test-5                               & \lstinline[language=Python, style=pythonstyle]|print(;print1;)                   | & \lstinline[language=Python, style=pythonstyle]|b''           |                & False                     \\
+    test-prefix-preservation            & \lstinline[language=Python, style=pythonstyle]|print(1,1+1,1+1+1)                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | & True                      \\
+    test-trailing-comma-1              & \lstinline[language=Python, style=pythonstyle]|print(1,2,3,end=' ')              | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3 '     |                & False                     \\
+    test-trailing-comma-2              & \lstinline[language=Python, style=pythonstyle]|print(1,2,end=' ')                | & \lstinline[language=Python, style=pythonstyle]|b'1 2 '       |                & False                     \\
+    test-trailing-comma-3              & \lstinline[language=Python, style=pythonstyle]|print(1,end=' ')                  | & \lstinline[language=Python, style=pythonstyle]|b'1 '         |                & False                     \\
+    test-tuple                           & \lstinline[language=Python, style=pythonstyle]|print((1,2,3))                    | & \lstinline[language=Python, style=pythonstyle]|b'(1, 2, 3)\n'| & True                      \\
+    test-idempotency-1                  & \lstinline[language=Python, style=pythonstyle]|print(())                         | & \lstinline[language=Python, style=pythonstyle]|b'()\n'       | & True                      \\
+    test-idempotency-2                  & \lstinline[language=Python, style=pythonstyle]|print((''))                       | & \lstinline[language=Python, style=pythonstyle]|b'\n'         | & True                      \\
+    test-vargs-without-trailing-comma & \lstinline[language=Python, style=pythonstyle]|print(1,2,3,file=sys.stderr)      | & \lstinline[language=Python, style=pythonstyle]|b'1 2 3\n'    | & True                      \\
+    test-with-trailing-comma           & \lstinline[language=Python, style=pythonstyle]|print(1,2,end=' ',file=sys.stderr)| & \lstinline[language=Python, style=pythonstyle]|b'1 2 '       |                & False                     \\
+    test-no-trailing-comma             & \lstinline[language=Python, style=pythonstyle]|print(1+1,file=sys.stderr)        | & \lstinline[language=Python, style=pythonstyle]|b'2\n'        | & True                      \\
+    test-spaces-before-file            & \lstinline[language=Python, style=pythonstyle]|print(file=sys.stderr)            | & \lstinline[language=Python, style=pythonstyle]|b'\n'         | & True                      \\ \bottomrule
     \end{tabular}
-    \caption{fix\_print translation and output of translated code for each test.}
+    \caption{fix-print translation and output of translated code for each test.}
     \label{table:fix_print-accuracy}
 \end{table}
 
@@ -61,22 +61,22 @@
     \begin{tabular}{@{}l|p{5em}p{5em}p{5em}p{5em}p{5em}p{5em}@{}}
     \toprule
     Test                                  & 2to3 Run Time 1 (ms) & 2to3 Run Time 2 (ms) & 2to3 Run Time 3 (ms) & 2to3 Run Time 4 (ms) & 2to3 Run Time 5 (ms) & 2to3 Mean Run Time (ms) \\ \midrule
-    test\_1                               & 274                  & 307                  & 274                  & 255                  & 255                  & 273                        \\
-    test\_2                               & 246                  & 249                  & 269                  & 253                  & 251                  & 253.6                      \\
-    test\_3                               & 256                  & 261                  & 248                  & 268                  & 278                  & 262.2                      \\ 
-    test\_4                               & 249                  & 252                  & 261                  & 250                  & 257                  & 253.8                      \\
-    test\_5                               & 282                  & 265                  & 255                  & 263                  & 275                  & 268                        \\
-    test\_prefix\_preservation            & 287                  & 285                  & 265                  & 255                  & 247                  & 267.8                      \\
-    test\_trailing\_comma\_1              & 267                  & 263                  & 319                  & 307                  & 293                  & 289.8                      \\
-    test\_trailing\_comma\_2              & 282                  & 262                  & 252                  & 279                  & 278                  & 270.6                      \\
-    test\_trailing\_comma\_3              & 291                  & 252                  & 267                  & 300                  & 289                  & 279.8                      \\
-    test\_tuple                           & 255                  & 252                  & 271                  & 269                  & 253                  & 260                        \\
-    test\_idempotency\_1                  & 262                  & 276                  & 273                  & 274                  & 284                  & 273.8                      \\
-    test\_idempotency\_2                  & 316                  & 265                  & 273                  & 260                  & 291                  & 281                        \\
-    test\_vargs\_without\_trailing\_comma & 266                  & 279                  & 331                  & 275                  & 329                  & 296                        \\
-    test\_with\_trailing\_comma           & 295                  & 265                  & 281                  & 282                  & 254                  & 275.4                      \\
-    test\_no\_trailing\_comma             & 255                  & 260                  & 314                  & 337                  & 285                  & 290.2                      \\ 
-    test\_spaces\_before\_file            & 268                  & 329                  & 257                  & 276                  & 322                  & 290.4                     \\ \bottomrule
+    test-1                               & 274                  & 307                  & 274                  & 255                  & 255                  & 273                        \\
+    test-2                               & 246                  & 249                  & 269                  & 253                  & 251                  & 253.6                      \\
+    test-3                               & 256                  & 261                  & 248                  & 268                  & 278                  & 262.2                      \\ 
+    test-4                               & 249                  & 252                  & 261                  & 250                  & 257                  & 253.8                      \\
+    test-5                               & 282                  & 265                  & 255                  & 263                  & 275                  & 268                        \\
+    test-prefix-preservation            & 287                  & 285                  & 265                  & 255                  & 247                  & 267.8                      \\
+    test-trailing-comma-1              & 267                  & 263                  & 319                  & 307                  & 293                  & 289.8                      \\
+    test-trailing-comma-2              & 282                  & 262                  & 252                  & 279                  & 278                  & 270.6                      \\
+    test-trailing-comma-3              & 291                  & 252                  & 267                  & 300                  & 289                  & 279.8                      \\
+    test-tuple                           & 255                  & 252                  & 271                  & 269                  & 253                  & 260                        \\
+    test-idempotency-1                  & 262                  & 276                  & 273                  & 274                  & 284                  & 273.8                      \\
+    test-idempotency-2                  & 316                  & 265                  & 273                  & 260                  & 291                  & 281                        \\
+    test-vargs-without-trailing-comma & 266                  & 279                  & 331                  & 275                  & 329                  & 296                        \\
+    test-with-trailing-comma           & 295                  & 265                  & 281                  & 282                  & 254                  & 275.4                      \\
+    test-no-trailing-comma             & 255                  & 260                  & 314                  & 337                  & 285                  & 290.2                      \\ 
+    test-spaces-before-file            & 268                  & 329                  & 257                  & 276                  & 322                  & 290.4                     \\ \bottomrule
     \end{tabular}
     \caption{Run times of 2to3 for each test and their means.}
     \label{table:2to3-performance}
@@ -86,24 +86,24 @@
     \centering
     \begin{tabular}{@{}l|p{5em}p{5em}p{5em}p{5em}p{5em}p{5em}@{}}
     \toprule
-    Test                                  & fix\_print Run Time 1 (ms) & fix\_print Run Time 2 (ms) & fix\_print Run Time 3 (ms) & fix\_print Run Time 4 (ms) & fix\_print Run Time 5 (ms) & fix\_print Mean Run Time (ms) \\ \midrule
-    test\_1                               & 3                          & 5                          & 4                          & 5                          & 5                          & 4.4                              \\
-    test\_2                               & 3                          & 3                          & 3                          & 4                          & 5                          & 3.6                              \\
-    test\_3                               & 3                          & 4                          & 3                          & 4                          & 5                          & 3.8                              \\
-    test\_4                               & 3                          & 4                          & 3                          & 4                          & 4                          & 3.6                              \\
-    test\_5                               & 4                          & 4                          & 3                          & 4                          & 3                          & 3.6                              \\
-    test\_prefix\_preservation            & 3                          & 4                          & 4                          & 4                          & 5                          & 4                                \\
-    test\_trailing\_comma\_1              & 5                          & 5                          & 4                          & 4                          & 5                          & 4.6                              \\
-    test\_trailing\_comma\_2              & 4                          & 4                          & 5                          & 3                          & 3                          & 3.8                              \\
-    test\_trailing\_comma\_3              & 4                          & 4                          & 5                          & 4                          & 5                          & 4.4                              \\
-    test\_tuple                           & 3                          & 5                          & 3                          & 3                          & 6                          & 4                                \\
-    test\_idempotency\_1                  & 6                          & 5                          & 3                          & 5                          & 3                          & 4.4                              \\
-    test\_idempotency\_2                  & 3                          & 3                          & 6                          & 4                          & 5                          & 4.2                              \\
-    test\_vargs\_without\_trailing\_comma & 4                          & 4                          & 3                          & 4                          & 3                          & 3.6                              \\
-    test\_with\_trailing\_comma           & 3                          & 3                          & 5                          & 4                          & 3                          & 3.6                              \\
-    test\_no\_trailing\_comma             & 3                          & 4                          & 3                          & 3                          & 4                          & 3.4                              \\ 
-    test\_spaces\_before\_file            & 3                          & 3                          & 4                          & 4                          & 4                          & 3.6                             \\ \bottomrule
+    Test                                  & fix-print Run Time 1 (ms) & fix-print Run Time 2 (ms) & fix-print Run Time 3 (ms) & fix-print Run Time 4 (ms) & fix-print Run Time 5 (ms) & fix-print Mean Run Time (ms) \\ \midrule
+    test-1                               & 3                          & 5                          & 4                          & 5                          & 5                          & 4.4                              \\
+    test-2                               & 3                          & 3                          & 3                          & 4                          & 5                          & 3.6                              \\
+    test-3                               & 3                          & 4                          & 3                          & 4                          & 5                          & 3.8                              \\
+    test-4                               & 3                          & 4                          & 3                          & 4                          & 4                          & 3.6                              \\
+    test-5                               & 4                          & 4                          & 3                          & 4                          & 3                          & 3.6                              \\
+    test-prefix-preservation            & 3                          & 4                          & 4                          & 4                          & 5                          & 4                                \\
+    test-trailing-comma-1              & 5                          & 5                          & 4                          & 4                          & 5                          & 4.6                              \\
+    test-trailing-comma-2              & 4                          & 4                          & 5                          & 3                          & 3                          & 3.8                              \\
+    test-trailing-comma-3              & 4                          & 4                          & 5                          & 4                          & 5                          & 4.4                              \\
+    test-tuple                           & 3                          & 5                          & 3                          & 3                          & 6                          & 4                                \\
+    test-idempotency-1                  & 6                          & 5                          & 3                          & 5                          & 3                          & 4.4                              \\
+    test-idempotency-2                  & 3                          & 3                          & 6                          & 4                          & 5                          & 4.2                              \\
+    test-vargs-without-trailing-comma & 4                          & 4                          & 3                          & 4                          & 3                          & 3.6                              \\
+    test-with-trailing-comma           & 3                          & 3                          & 5                          & 4                          & 3                          & 3.6                              \\
+    test-no-trailing-comma             & 3                          & 4                          & 3                          & 3                          & 4                          & 3.4                              \\ 
+    test-spaces-before-file            & 3                          & 3                          & 4                          & 4                          & 4                          & 3.6                             \\ \bottomrule
     \end{tabular}
-    \caption{Run times of fix\_print for each test and their means.}
+    \caption{Run times of fix-print for each test and their means.}
     \label{table:fix_print-performance}
 \end{table}
