--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -17,9 +17,9 @@ Overall, the findings suggest that 2to3 outperforms fix-print in terms of comput
 
 During testing, it was discovered that the version of Python 2 (the \verb|python2-bin| package in the Arch User Repository (AUR), a collection of software packages intended for users of the Arch Linux operating system, the platform used during testing) used in testing was bugged. Trailing commas at the end of print statements should result in a newline character --- a special character that tells the computer to move to a new line, similar in effect to hitting enter on a keyboard --- not being printed. The Python 2 documentation states that is the intended behavior, and therefore both 2to3 and fix-print attempt to replicate that when translating. However, the version of Python 2 used outputted a newline character even when a trailing comma was present, contrary to its documented behavior, thus rendering otherwise accurate translations from both translators inaccurate. A version of Python 2 obtained directly from the official Python website was also tested, however that version exhibited the same incorrect behavior as the version from the AUR, thus it was not used for data collection. Therefore, for more accurate results, the accuracy of both translators excluding tests with trailing commas was calculated as well.
 
-Excluding the trailing comma tests, 2to3 was still more accurate than fix-print. However, there were two tests that were unique within the test suite, as they contained multiple print statements instead of the only a single one, as every other test did. As fix-print was only specified to translate single print statements, it naturally produced incorrect translations for these two tests. Excluding these two tests, fix-print attained a higher accuracy than 2to3, due to the fact that 2to3 failed the \verb|test_idempotency_1| test where fix-print did not, as seen in Tables \ref{table:2to3-accuracy} and \ref{table:fix_print-accuracy}. In Python 2, \lstinline[language=Python, style=pythonstyle]|print ()| outputs \verb|()|, as the empty parenthesis represent an empty tuple, which is a special type of list in Python. To replicate this behavior, the correct Python 3 translation should be \lstinline[language=Python, style=pythonstyle]|print(())|, as Python 3 print statements require an extra pair of parentheses around whatever content is to be outputted. fix-print is specified to always do as such, however in this case 2to3 translated \lstinline[language=Python, style=pythonstyle]|print ()| as \lstinline[language=Python, style=pythonstyle]|print()|, which is incorrect as that translation simply prints nothing, as there is no content within the parentheses.
+Excluding the trailing comma tests, 2to3 was still more accurate than fix-print. However, there were two tests that were unique within the test suite, as they contained multiple print statements instead of the only a single one, as every other test did. As fix-print was only specified to translate single print statements, it naturally produced incorrect translations for these two tests. Excluding these two tests, fix-print attained a higher accuracy than 2to3, due to the fact that 2to3 failed the \verb|test-idempotency-1| test where fix-print did not, as seen in Tables \ref{table:2to3-accuracy} and \ref{table:fix_print-accuracy}. In Python 2, \lstinline[language=Python, style=pythonstyle]|print ()| outputs \verb|()|, as the empty parenthesis represent an empty tuple, which is a special type of list in Python. To replicate this behavior, the correct Python 3 translation should be \lstinline[language=Python, style=pythonstyle]|print(())|, as Python 3 print statements require an extra pair of parentheses around whatever content is to be outputted. fix-print is specified to always do as such, however in this case 2to3 translated \lstinline[language=Python, style=pythonstyle]|print ()| as \lstinline[language=Python, style=pythonstyle]|print()|, which is incorrect as that translation simply prints nothing, as there is no content within the parentheses.
 
-2to3's failure to translate the \verb|test_idempotency_1| test correctly is intentional, as translating with 2to3 is intended to be \textit{idempotent}, meaning that if Python 2 code is fed into 2to3, producing Python 3 code, then feeding that code back into 2to3 should result in no changes. This is important as it allows for consistency and reproducibility of translations. If 2to3 always surrounded the content to be printed in print statements as fix-print is specified to do, then it would not be idempotent as it would always add parentheses in print statements, even for Python 3 code it already translated. This is a clear example of how formal verification is not a panacea for all code issues. Formal verification that all content in print statements would be surrounded by parentheses did specify that all resulting translations would be correct. However it also made the translator nonidempotent, which is also a good quality to have, especially in situations in large codebases where some code may be translated and some may not be, and it is desired that translated code is not further modified. Thus, any formal verification of a program is only as good as its specification. If the specification is faulty or implies an undesirable effect (such as nonidempotency), then the verified program will contain such flaws despite being 'mathematically proven to be correct.' In real codebases, it is unlikely that \lstinline[language=Python, style=pythonstyle]|print ()| is ever used as it has no useful effect, and 2to3 translates virtually ever other print statement accurately, thus in real scenarios where a Python 2 to 3 translator is needed, 2to3's emphasis on idempotency at the cost of a few edge cases being inaccurately translated is likely preferable to fix-print's guaranteed correctness at the cost of changing already translated files in a codebase each time a new translation is run.
+2to3's failure to translate the \verb|test-idempotency-1| test correctly is intentional, as translating with 2to3 is intended to be \textit{idempotent}, meaning that if Python 2 code is fed into 2to3, producing Python 3 code, then feeding that code back into 2to3 should result in no changes. This is important as it allows for consistency and reproducibility of translations. If 2to3 always surrounded the content to be printed in print statements as fix-print is specified to do, then it would not be idempotent as it would always add parentheses in print statements, even for Python 3 code it already translated. This is a clear example of how formal verification is not a panacea for all code issues. Formal verification that all content in print statements would be surrounded by parentheses did specify that all resulting translations would be correct. However it also made the translator nonidempotent, which is also a good quality to have, especially in situations in large codebases where some code may be translated and some may not be, and it is desired that translated code is not further modified. Thus, any formal verification of a program is only as good as its specification. If the specification is faulty or implies an undesirable effect (such as nonidempotency), then the verified program will contain such flaws despite being 'mathematically proven to be correct.' In real codebases, it is unlikely that \lstinline[language=Python, style=pythonstyle]|print ()| is ever used as it has no useful effect, and 2to3 translates virtually ever other print statement accurately, thus in real scenarios where a Python 2 to 3 translator is needed, 2to3's emphasis on idempotency at the cost of a few edge cases being inaccurately translated is likely preferable to fix-print's guaranteed correctness at the cost of changing already translated files in a codebase each time a new translation is run.
 
 \subsection{Performance}
 \pgfplotstableread[row sep=\\,col sep=&]{
@@ -58,7 +58,7 @@ Excluding the trailing comma tests, 2to3 was still more accurate than fix-print.
             \legend{2to3 Average Run Time (ms), fix-print Average Run Time (ms)}
         \end{axis}
     \end{tikzpicture}
-    \caption{Mean run times of both 2to3 and fixprint for each test.}
+    \caption{Mean run times of both 2to3 and fix-print for each test.}
 \end{figure*}
 
 
