--- a/paper/main.tex
+++ b/paper/main.tex
@@ -17,7 +17,8 @@
 \title{Formal Verification of Python 2 to 3 Translations}
 
 \begin{document}
-\maketitle
+
+\include{Title Page}
 
 \input{Introduction}
 \input{Literature Review}
