--- a/paper/Data.tex
+++ b/paper/Data.tex
@@ -1,6 +1,8 @@
 \section{Data}
 \label{appendix:Data}
+
 \subsection{Computational Accuracy}
+\label{appendix:Accuracy}
 
 \begin{table}[h!]
     \centering
@@ -55,6 +57,7 @@
 \end{table}
 
 \subsection{Performance}
+\label{appendix:Performance}
 
 \begin{table}[h!]
     \centering
