--- a/paper/Title Page.tex
+++ b/paper/Title Page.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
     \begin{center}
-        \vfill
+        \vspace*{10cm}
 
         \Huge
         \textbf{Formal Verification of Python 2 to 3 Translations}
