--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,4 +1,4 @@
-\documentclass[sigplan, nonacm, screen, natbib=false]{acmart}
+\documentclass[titlepage, sigplan, nonacm, screen, natbib=false]{acmart}
 \RequirePackage[datamodel=acmdatamodel,style=acmnumeric]{biblatex}
 \RequirePackage{listings}
 \RequirePackage{xcolor}
